Added shipping and bootstrap formatting

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 .tmp
 .sass-cache
 images/*
+RocketShipIt/*
 includes/amazon.php
 includes/amazonPricingMWS.php
 includes/getMatchingProduct.php
